--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
             <div class="col-xs-3"></div>
             <div class="col-xs-6">
                 <div class="well page active">
-                    <form name="myForm" onsubmit="return main();" method="get">
                          <h1>Credit Card Valadation in Javascript</h1>
                         <input type="text" class="form-control"  id="creditcard" placeholder="Credit Card Number">
-                        <input type="submit" id="button" class="btn btn-primary" value="Valadate">
-                    </form>
+                        <button id="button" class="btn btn-primary" onclick="main();" >Valadate</button>
                 </div>
                 <div id="results">
                 
