--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-xs-3"></div>
             <div class="col-xs-6">
                 <div class="well page active">
-                         <h1>Credit Card Valadation in Javascript</h1>
+                         <h1>Credit Card Validation in Javascript</h1>
                         <input type="text" class="form-control"  id="creditcard" placeholder="Credit Card Number">
                         <button id="button" class="btn btn-primary" onclick="main();" >Valadate</button>
                 </div>
